2025-03-16T00:44:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13878193163 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 42 94
* notice: prev accum: outdated-unq outdated-all / unq all: 3979 8589 / 4047 8685
* notice: next accum: outdated-unq outdated-all / unq all: 3983 8593 / 4049 8687
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-03-01] / [2025-03-15]

2025-03-14T12:14:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13856339623 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: last 14d: unq all: 42 96
* notice: prev accum: outdated-unq outdated-all / unq all: 3978 8588 / 4046 8684
* notice: next accum: outdated-unq outdated-all / unq all: 3979 8589 / 4047 8685
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-28] / [2025-03-14]

2025-03-14T00:40:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13847402611 # 875
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: last 14d: unq all: 42 96
* notice: prev accum: outdated-unq outdated-all / unq all: 3973 8582 / 4046 8683
* notice: next accum: outdated-unq outdated-all / unq all: 3978 8588 / 4046 8684
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [2025-02-27] / [2025-03-13]

2025-03-13T12:15:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13834350385 # 874