@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-16T00:44:26Z",
-  "count_outdated" : 8593,
-  "uniques_outdated" : 3983,
-  "count" : 8687,
-  "uniques" : 4049,
+  "timestamp" : "2025-03-16T12:13:29Z",
+  "count_outdated" : 8594,
+  "uniques_outdated" : 3984,
+  "count" : 8688,
+  "uniques" : 4050,
   "clones" : [
-    {
-      "timestamp": "2025-03-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-03T00:00:00Z",
       "count": 1,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
