@@ -3,11 +3,6 @@
   "uniques": 42,
   "clones": [
     {
-      "timestamp": "2025-03-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-03T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -71,6 +66,11 @@
       "timestamp": "2025-03-15T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
